feat: Add deleteAccount route
