# src/api/index.js
@@ -1,13 +1,30 @@
 // ============================================================
 // Import modules
 import createAccount from './createAccount';
+import deleteAccount from './deleteAccount';
+import getAccount from './getAccount';
 import listAccount from './listAccounts';
+import updateAccount from './updateAccount';
+import { BASE64_REGEXP } from '../constants';
 
 // ============================================================
 // Functions
 function routes(app) {
-    app.get('/accounts', listAccount);
+    let route;
+
+    // /accounts
+    route = '/accounts';
+    app.get(route, listAccount);
+
+    // /account
+    route = '/account';
     app.put('/account', createAccount);
+
+    // account/:id
+    route = `/account/:id`;
+    app.get(route, getAccount);
+    app.delete(route, deleteAccount);
+    app.post(route, updateAccount);
 }
 
 // ============================================================
